Add parser support for string concatenation

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -19,5 +19,9 @@
                 language="Rexx"
                 implementationClass="com.github.neppord.rexxintellijplugin.RexxSyntaxHighlighter"
         />
+        <lang.parserDefinition
+                language="Rexx"
+                implementationClass="com.github.neppord.rexxintellijplugin.RexxParserDefinition"
+        />
     </extensions>
 </idea-plugin>
