--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,12 @@
 
 pluginGroup = se.peopleandcode.rexxintellijplugin
 pluginName = rexx-intellij-plugin
-pluginRepositoryUrl = https://github.com/Neppord/rexx-intellij-plugin
+pluginRepositoryUrl = https://github.com/People-and-Code/rexx-intellij-plugin
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 223
+pluginSinceBuild = 233
 pluginUntilBuild = 242.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
@@ -15,11 +15,13 @@ platformType = IC
 platformVersion = 2024.2.4
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
-# Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
+# Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
 platformPlugins =
+# Example: platformBundledPlugins = com.intellij.java
+platformBundledPlugins =
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion = 8.5
+gradleVersion = 8.10.2
 
 # Opt-out flag for bundling Kotlin standard library -> https://jb.gg/intellij-platform-kotlin-stdlib
 kotlin.stdlib.default.dependency = false
