--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,23 @@
 [versions]
 # libraries
-annotations = "26.0.1"
+junit = "4.13.2"
+junit5 = "5.11.3"
 
 # plugins
+changelog = "2.2.1"
+intelliJPlatform = "2.1.0"
 kotlin = "2.0.21"
-changelog = "2.2.0"
-gradleIntelliJPlugin = "1.17.4"
-qodana = "0.1.13"
-kover = "0.7.5"
+kover = "0.8.3"
+qodana = "2024.2.3"
 grammarkit = "2022.3.2.2"
 
 [libraries]
-annotations = { group = "org.jetbrains", name = "annotations", version.ref = "annotations" }
+junit = { group = "junit", name = "junit", version.ref = "junit" }
+junit5 = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit5" }
 
 [plugins]
 changelog = { id = "org.jetbrains.changelog", version.ref = "changelog" }
-gradleIntelliJPlugin = { id = "org.jetbrains.intellij", version.ref = "gradleIntelliJPlugin" }
+intelliJPlatform = { id = "org.jetbrains.intellij.platform", version.ref = "intelliJPlatform" }
 kotlin = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
 qodana = { id = "org.jetbrains.qodana", version.ref = "qodana" }
